@@ -50,6 +50,7 @@ sunuo (0.3.0) unstable; urgency=low
   * login: initialize new account with Flags=0
   * login: support the "young" flag
   * login: reject empty username or password
+  * login: optionally hide game servers which are down
   * debian: symlink base/Data to /etc/sunuo
   * debian: symlink base/var/log to /var/log/sunuo
   * debian: install SunUO.exe.config in /etc/sunuo/
